# SocketPad

./: Readme.md
client/: client.pro  clsock.cpp  clsock.h  filechange.cpp  filechange.h  fileedit.cpp  fileedit.h  fileedit.ui  fileslist.cpp  fileslist.h  fileslist.ui  filesmanager.cpp  filesmanager.h  global_objs.cpp  global_objs.h  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  regiisterform.cpp  regiisterform.h  regiisterform.ui  sessionmanager.cpp  sessionmanager.h  usermanager.cpp  usermanager.h  userpanel.cpp  userpanel.h  userpanel.ui
docs/: Doxyfile  client_diagram.zargo  server_diagram.xmi
server/: CMakeLists.txt  CNServer.cpp  CNServer.h  CNSocket.cpp  CNSocket.h  ContributorContainer.cpp  ContributorContainer.h  File.cpp  File.h  FileEditRoom.cpp  FileEditRoom.h  FilesManager.cpp  FilesManager.h  Helper.cpp  Helper.h  RoomManager.h  User.cpp  User.h  main.cpp
server/cmake/Modules/: FindODB.cmake  UseODB.cmake
server/configs/: config.json
server/db/: cn.sql
server/scripts/: env_config.sh
